--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,20 @@
 {
   "name": "web",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.0-next.3e165448"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-testing-library": "^5.0.0"
+  }
 }
